# lingbot

./: .gitignore  Makefile  README.md  check.py  check_com.py  check_fram.py  check_lingbot.py  exclude.txt  pyproject.toml  requirements.txt  robocasa_action_alignment_audit.md
evaluation/libero/: README.md  client.py  launch_client.sh  launch_server.sh
evaluation/robocasa/: eval_policy_client_openpi.py  launch_client_robocasa.sh  launch_server.sh
evaluation/robotwin/: eval_polict_client_openpi.py  launch_client.sh  launch_client_multigpus.sh  launch_server_multigpus.sh  websocket_client_policy.py
results_robocasa/metrics/: res.json
results_robocasa_29066/metrics/: res.json
results_robocasa_29076/metrics/: res.json
results_robocasa_new/metrics/: res.json
script/: inspect_train_gpu_batch.py  run_launch_va_server_sync.sh  run_va_check.sh  run_va_posttrain.sh  run_va_posttrain_deepspeed.sh
wan_va/: __init__.py  compute_robocasa.py  robocasa_30d_norm_stats.json  train.py  wan_va_server.py
wan_va/configs/: __init__.py  shared_config.py  va_demo_cfg.py  va_demo_i2va.py  va_demo_train_cfg.py  va_franka_cfg.py  va_franka_i2va.py  va_libero_cfg.py  va_libero_i2va.py  va_libero_train_cfg.py  va_robocasa_cfg.py  va_robocasa_train_cfg.py  va_robotwin_cfg.py  va_robotwin_i2va.py
wan_va/configs/deepspeed/: zero2_offload.json
wan_va/dataset/: lerobot_latent_dataset.py
wan_va/distributed/: fsdp.py  util.py
wan_va/modules/: model.py  model_ori.py  utils.py
wan_va/utils/: sever_utils.py  utils.py
(+1 files in other folders)
